input text smaller on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,5 +11,5 @@ input[type="number"]::-webkit-outer-spin-button {
 
 input:checked ~ .dot {
   transform: translateX(100%);
-  background-color: #34d399;
+  background-color: #374151;
 }
